<resources>
    <string name="app_name">Bulletin</string>
    <string name="search_query_hint">Enter search query</string>
    <string name="search_button">Search</string>
    <string name="action_filter_settings">Filter</string>
    <string name="sort_order">Sort By</string>
    <string name="arts">Arts</string>
    <string name="sports">Sports</string>
    <string name="fashion_style"><![CDATA[Fashion & Style]]></string>
    <string name="newsdesk_values">News Desk Values</string>
    <string name="begin_date">Begin Date</string>
    <string name="search_text">Search</string>

    <string name="sortby_prompt">Choose a folder</string>

    <string-array name="sortby_choices">
        <item>Oldest</item>
        <item>Newest</item>

    </string-array>

</resources>
